--- a/main.css
+++ b/main.css
@@ -24,6 +24,7 @@ h6 {
 }
 html {
   scroll-behavior: smooth;
+  color: white;
 }
 body {
   color: #777777;
@@ -258,3 +259,69 @@ p {
       background-color: #555; /* Add a dark-grey background on hover */
     }
     
+/* darks mode ka css using js*/
+
+body.dark {
+	background: #292C35;
+}
+
+.checkbox {
+	opacity: 0;
+	position: absolute;
+  padding: 50px 50px;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1.5);
+}
+
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
+}
+
+
+.fa-moon {
+	color: #f1c40f;
+}
+
+.fa-sun {
+	color: #f39c12;
+}
+/* darks mode ka css using js ends*/
+
+/* start dark mode */
+
+#icon{
+  width: 30px;
+  cursor: pointer;
+}
+
+:root{
+  --primary-color: white;
+  --secondary-color: #212121;
+}
+
+/* end dark mode */
+
